--- a/Nucleo/Ver_y_Editar_Péliculas.ui
+++ b/Nucleo/Ver_y_Editar_Péliculas.ui
@@ -32,7 +32,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../Python/Nucleo/Imagenes/logos-UNAH-600x600.png</normaloff>../Python/Nucleo/Imagenes/logos-UNAH-600x600.png</iconset>
+    <normaloff>Imagenes/logos-UNAH-600x600.png</normaloff>Imagenes/logos-UNAH-600x600.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:rgb(204, 204, 204);</string>
@@ -161,7 +161,7 @@ border-radius: 35px;</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="../Python/Nucleo/Imagenes/Interfaz.qrc"/>
+  <include location="Imagenes/Interfaz.qrc"/>
  </resources>
  <connections/>
 </ui>
